fix flexbox so it looks better on Safari browser

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 .content {
     display: flex;
     justify-content: center;
@@ -10,6 +11,7 @@
     align-items: center;
     width: 275px;
     height: 500px;
+    padding: 25px;
     border: 5px solid black;
     border-style: groove;
     border-radius: 10px;
@@ -19,35 +21,35 @@
 .buttons {
     display: flex;
     gap: 2px;
-
+    flex: auto;
 
 }
 .number-buttons {
     display: flex;
     flex-wrap: wrap;
-    flex: 0, 1, auto;
     width: 150px;
 }
 
 .operator-buttons {
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .special-buttons {
     display: flex;
     flex-direction: column;
     align-items: stretch;
-    width: 215px;
     margin-top: 10px;
+    
 }
 
 .special-buttons button {
-    flex: auto;
     font-size: 18pt;
     padding: 5px;
     font-weight: 500;
     background-color: rgb(238, 143, 0);
+    width: 210px;
 }
 
 #point {
@@ -86,6 +88,7 @@ button {
     font-size: 20pt;
     padding: 10px;
     flex: 1;
+  
 }
 
 .operator-buttons button {
@@ -93,17 +96,19 @@ button {
     padding: 10px;
     background-color: darkgray;
     color: white;
+    flex: 1;
 }
 
 .display {
     text-align: center;
     line-height: 80px;
     height: 80px;
-    width: 212px;
+    width: 250px;
     border: 1px solid black;
     background-color: beige;
-    margin-top: 30px;
     margin-bottom: 15px;
     font-size: min(3em, 28vw);
+
+    overflow-wrap: break-word;
 
 }
